--- a/gb/13/4/16/n3847407.md
+++ b/gb/13/4/16/n3847407.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lsouru216/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lsouru216/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lsouru216/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lsouru216/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lsouru216/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lsouru216/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>马三家酷刑黑幕发酵 304军医院及法院器官案曝光</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2013/04/1206262040461497.jpg" />
 <h6>马三家酷刑黑幕不断发酵，牵动中国敏感的政局，被外界视为习近平阵营的媒体中国财经网再抛重量级炮弹，披露全国黑市器官买卖网络，文章直接点名北京304军医院和地方法院，并称“事关军方三甲医院和地方中级法院的部分，并未在该案公诉书中出现，这两家机构并没有承担相应的责任” 。（Getty Images）
 </h6>
 <hr>
-<p>【大纪元2013年04月16日讯】（大纪元记者黄清综合报导）马三家酷刑黑幕发酵，中共高层就此议题激烈拉锯，4月15日，被外界视为有习近平阵营背景的中国大陆财经网再抛重量级炮弹，披露全国黑市<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>买卖网络，称之为这是“涉及军方医院和地方法院的一起器官刑事案件”、但“这两家机构并没有承担相应的责任”。</p>
-<p><B>《财经网》点名军方304医院等与地方政法系统勾结形成<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>黑市网络</B></p>
+	<p>【大纪元2013年04月16日讯】（大纪元记者黄清综合报导）马三家酷刑黑幕发酵，中共高层就此议题激烈拉锯，4月15日，被外界视为有习近平阵营背景的中国大陆财经网再抛重量级炮弹，披露全国黑市<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>买卖网络，称之为这是“涉及军方医院和地方法院的一起器官刑事案件”、但“这两家机构并没有承担相应的责任”。</p>
+<p><B>《财经网》点名军方304医院等与地方政法系统勾结形成<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%99%A8%E5%AE%98.md#1">器官</a>黑市网络</B></p>
 <p>此文是去年9月10日财经网刊登的《非法买卖51颗肾脏背后：器官由三甲医院洗白》的延续，虽简短，此次却直接点出关键点：涉及医疗系统和地方军队的一起刑事案件－－把中国非法器官交易的真正后台抛出－－地方政府法院。</p>
-<p>文章曝光由中共地方政法机构与军方医院和器官黑道中介联合操纵的器官买卖黑幕，含蓄点明，直击<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团的最要害。</p>
+<p>文章曝光由中共地方政法机构与军方医院和器官黑道中介联合操纵的器官买卖黑幕，含蓄点明，直击<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>集团的最要害。</p>
 <p>与上次报导过滤了304医院等重要线索的不同之处在于，这次的报导明确点出军方304医院的参与，甚至提到了曾经为中共活摘器官站台的前卫生部长黄洁夫。</p>
 <p>但文章仍没有公开提及震惊世界的活摘器官事件涉庞大被非法关押的法轮功学员作为器官供体等最敏感内容。</p>
 <p><B>器官“产业”黑链条：军队医院、法院……仍未提法轮功等最敏感内容</B></p>
-<p>北京时间4月15日10：21, 在中共高层不断显示出对马三家女子<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99.md#1">劳教</a>所黑幕曝光的不同态度之际，与习近平、王岐山亲近的财经网发表文章《徐潜川：从卖肾链条到器官黑市》。</p>
+<p>北京时间4月15日10：21, 在中共高层不断显示出对马三家女子<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99.md#1">劳教</a>所黑幕曝光的不同态度之际，与习近平、王岐山亲近的财经网发表文章《徐潜川：从卖肾链条到器官黑市》。</p>
 <p>此文开篇写道：被舆论简化为“卖肾买IPHONE”的这个段子背后，是涉及医疗系统和地方军队的一起刑事案件。越是不透明和封闭的领域，越容易滋生罪恶。</p>
 <p>文章直接点名“事关军方三甲医院和地方中级法院的部分，并未在该案公诉书中出现，这两家机构并没有承担相应的责任”。</p>
 <p>文中披露：器官中介郑伟去枣庄中院，经法官刘军联系，购买了死刑犯8枚肾脏，再卖给军方三甲医院304医院，和他关系密切的是泌尿科主任叶林阳…… 郑伟的故事，让我们看到了一个遍布全国勾连各方的器官买卖网络。</p>
@@ -49,7 +49,7 @@
 <p>－财经网一直释放好强的信号，看来不是跟《人民日报》和《环球屎报》不同道? </p>
 <p>－惊心动魄的一条链！</p>
 <p>－那么“活摘器官”呢？</p>
-<p>－我想到了“马三家<ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99.md#1">劳教</a>所”的活摘器官罪恶。</p>
+<p>－我想到了“马三家<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8A%B3%E6%95%99.md#1">劳教</a>所”的活摘器官罪恶。</p>
 <p>－北京解放军第一附属医院（原304医院） 医院性质 军队编制</p>
 <p>－这帮禽兽把中国人的平均道德水平拉入了十八层地狱。</p>
 <p>－如果真是死刑犯的，还可以接受。就怕有很多为了器官而定罪致死的，或者被自杀</p>
@@ -68,7 +68,7 @@
 <p>2012年8月4日，也就是王立军、谷开来、薄熙来案一波接一波，高潮迭起的时候，公安部突然宣布破获了28个贩卖器官的犯罪团伙。</p>
 <p>在王立军和薄熙来案曝光的过程当中，有几件事情引起了大陆民众的注意，并且成为社交网络上的热门话题。一个就是王立军的锦州公安局现场心理研究中心，他自己宣布做了几千例人体器官移植实验，还获得了光华科技奖；另一个就是薄熙来在大连辽宁当政期间，大连的两个尸体塑化工厂，引起了广泛的讨论。</p>
 <p>当局此时宣布破获贩卖器官的犯罪团伙，实际上就是把移植器官的来源推到犯罪集团身上去。</p>
-<p><B>军医院是活摘场所 <ahref="https://github.com/lsouru216/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>军中代言人徐才厚以军队参与迫害法轮功 </B></p>
+<p><B>军医院是活摘场所 <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>军中代言人徐才厚以军队参与迫害法轮功 </B></p>
 <p>自薄熙来案被抛出，海外媒体开始大量曝光其是活摘法轮功学员器官的元凶，中共当局于是用犯罪集团做替罪羊，结果反而曝光了很多原来是用于法轮功学员这个系统，包括法院伪造死刑文件，伪造捐献证明等等。这一些不太可能是为郑伟这个普通犯罪份子去破例的，而是原来法院就是这样的常规操作，也曝光了海外一直在揭露的，说是军队医院是活摘的主要场所这个事实，也通过这个事件的披露报导证实了。</p>
 <p>辽宁瓦房店一位老军官2006年曾向《大纪元》披露，前中共党魁江泽民与军阀、官僚相互勾结统治下的恐怖政治和血腥杀戮令神州大地一片阴霾。他们早已恶贯满盈，历史已将他们订在耻辱柱上，等待他们的是正义的行刑。</p>
 <p>据老军官披露，参与在“六四”中镇压学生的徐才厚（辽宁瓦房店市长兴岛人）连连高升是江、于刻意培养的黑手党。他上台后不折不扣的执行党魁江泽民的路线，以辽宁为基地，军队参与加大了对法轮功学员的迫害力度。</p>
@@ -84,50 +84,40 @@
 <p>参考中国活摘器官真相书籍：</p>
 <p><ahref="http://broadpressinc.com /node/70博大出版社器官掠夺"target="_blank">http: //broadpressinc.com/node/70博大出版社器官掠夺 </a></p>
 <p>（责任编辑：孙芸）</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846618.md#1">被删的马三家劳教所酷刑报导再现 高层分裂</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846598.md#1">刘云山连遭3次警告 出局中共最高决策圈</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846654.md#1">废除劳教成政局引爆点 孟建柱倒逼张德江</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846673.md#1">朱镕基夫妇牵手出游照网上曝光 曾恶斗江泽民</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846637.md#1">辽宁四月飘雪3次 45年来最冷 马三家冤情未平</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846621.md#1">薄熙来政变有先例 胡锦涛解密多起武装攻击党政军事件</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846611.md#1">中共最高检发“死亡通告” 习近平预警江派</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846599.md#1">薄熙来倒台后  中共国务院内阁调研展示权力分工</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/13/4/15/n3846584.md#1">纽时：“无神论”在中国不行了？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/4/15/n3846584.md#1">纽时：“无神论”在中国不行了？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/4/15/n3846598.md#1">刘云山连遭3次警告 出局中共最高决策圈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/4/15/n3846599.md#1">薄熙来倒台后  中共国务院内阁调研展示权力分工</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/4/15/n3846611.md#1">中共最高检发“死亡通告” 习近平预警江派</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/lsouru216/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415356.md#1" target="_blank">共产暴政录：岳父全家被杀 盛世才本人善终</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943833.md#1">疫情肆虐 美国民众集体诉讼中共当局六被告</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945401.md#1">又一明星确诊 英导演兼演员感染武汉肺炎</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lsouru216/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lsouru216/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/16/n3847407.htm">马三家酷刑黑幕发酵 304军医院及法院器官案曝光</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/4/16/n3847407.htm">马三家酷刑黑幕发酵 304军医院及法院器官案曝光</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lsouru216/djy/blob/master/gb/13/4/16/n3847407.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lsouru216/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lsouru216/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lsouru216/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lsouru216/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lsouru216/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/13/4/16/n3847407.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
